Reduced page load with a smaller background image, fixed tablet spacing

--- a/wp-content/themes/aukland/custom.css
+++ b/wp-content/themes/aukland/custom.css
@@ -142,7 +142,7 @@ MAIN PAGE HERO
 
 .main-hero {
   margin-top: -50px;
-  background: url(images/bg3.jpg) no-repeat top #000;
+  background: url(images/bg3-med.jpg) no-repeat top #000;
   height: 100vmin;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -180,7 +180,7 @@ MAIN PAGE HERO
 }
 
 
-#main-content { min-height: 90vh; padding-top: 30px; }
+#main-content { min-height: 90vmin; padding-top: 30px; }
 
 
 /*--------------------------------------------------------------
